[package]
name = "slugid"
version = "1.0.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
description = "SlugId generation for Rust"
repository = "https://github.com/taskcluster/slugid-rust"
homepage = "https://docs.rs/slugid/"
documentation = "https://docs.rs/slugid/"
edition = "2018"

[dependencies]
ring = { version = "0.16.15" }
base64 = { version = "0.12.3" }
lazy_static = { version = "1.4.0" }
