[package]
name = "slugid"
version = "1.0.1"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
description = "SlugId generation for Rust"
repository = "https://github.com/taskcluster/slugid-rust"
homepage = "https://docs.rs/slugid/"
documentation = "https://docs.rs/slugid/"
edition = "2018"

[dependencies]
base64 = "0.22.1"
lazy_static = { version = "1.4.0" }
ring = "0.17.8"
